[metadata]
name = django_informixdb_vault
description = A database driver for Django to connect to an Informix db via ODBC, obtaining the credentials from Hashicorp Vault
long_description = README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/reecetech/django_informixdb_vault
author = Reecetech
author_email = opensource@reecetech.com.au
license = APLv2
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
project_urls =
    Documentation = https://github.com/reecetech/django_informixdb_vault
    Source = https://github.com/reecetech/django_informixdb_vault
    Source = https://github.com/reecetech/django_informixdb_vault/issues
keywords = django informix vault
setup_requires =
    setuptools_scm

[options]
packages = find:
install_requires =
    django_informixdb
    hvac

[options.extras_require]
dev =
    check-manifest
test =
    coverage
all =
    %(test)s

[bdist_wheel]
universal=1

[aliases]
test=pytest

[flake8]
exclude = .git, test
max-line-length=120
